[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gripe-mcp"
version = "0.1.0"
description = "Agent complaint box — one-tool MCP for logging bugs and improvement requests"
readme = "README.md"
license = "LGPL-3.0-or-later"
requires-python = ">=3.11"
authors = [{ name = "Reto Stamm", email = "reto@retostamm.com" }]
keywords = ["mcp", "llm", "monitoring", "gripe", "agent"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "mcp[cli]>=1.0",
    "platformdirs>=4.0",
]

[project.urls]
Homepage = "https://github.com/retospect/gripe-mcp"
Repository = "https://github.com/retospect/gripe-mcp"

[project.optional-dependencies]
postgres = ["psycopg[binary]>=3.0"]

[project.scripts]
gripe = "gripe.server:main"

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "ruff>=0.11",
    "mypy>=1.15",
    "pre-commit>=4",
]

[tool.hatch.build.targets.wheel]
packages = ["src/gripe"]

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
check_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
